--- a/.github/workflows/update-sns-tokens.yml
+++ b/.github/workflows/update-sns-tokens.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Prepare
         uses: ./.github/actions/prepare
       - name: Update
-        run: npm run build:sns-tokens
+        run: npm run build:tokens-sns
 
       - name: Check for Changes
         run: |
