--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"build:metadata": "node scripts/build.metadata.mjs",
 		"build:copy-workers": "node ./scripts/build.copy-workers.mjs",
 		"build:post-process": "npm run build:metadata && npm run build:csp && npm run build:copy-workers && npm run build:compress",
-		"build:sns-tokens": "node scripts/build.sns.tokens.mjs",
+		"build:tokens-sns": "node scripts/build.tokens.sns.mjs",
 		"dev": "vite dev",
 		"build": "tsc --noEmit && vite build && npm run build:post-process",
 		"preview": "vite preview",
