--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"build:copy-workers": "node ./scripts/build.copy-workers.mjs",
 		"build:post-process": "npm run build:metadata && npm run build:csp && npm run build:copy-workers && npm run build:compress",
 		"build:tokens-sns": "node scripts/build.tokens.sns.mjs",
+		"build:tokens-ckerc20": "node scripts/build.tokens.ckerc20.mjs",
 		"dev": "vite dev",
 		"build": "tsc --noEmit && vite build && npm run build:post-process",
 		"preview": "vite preview",
