--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"@dfinity/candid": "^1.3.0",
 		"@dfinity/ckbtc": "^2.3.3",
 		"@dfinity/cketh": "^3.0.1-next-2024-05-21.2",
-		"@dfinity/gix-components": "^4.2.0-next-2024-05-06.2",
+		"@dfinity/gix-components": "^4.3.0",
 		"@dfinity/ic-management": "^4.0.0",
 		"@dfinity/ledger-icp": "^2.2.4",
 		"@dfinity/ledger-icrc": "^2.3.1",
