--- a/.github/workflows/update-snapshots.yml
+++ b/.github/workflows/update-snapshots.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   update_snapshots:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Fail if branch is main
         if: ${{ github.ref == 'refs/heads/main' }}
@@ -14,7 +14,7 @@ jobs:
           exit 1
 
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Install dependencies
         run: npm ci
       - name: Run Playwright tests
