--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 	},
 	"devDependencies": {
 		"@dfinity/identity-secp256k1": "^1.3.0",
+		"@dfinity/internet-identity-playwright": "file:../internet-identity-playwright/dfinity-internet-identity-playwright-0.0.1.tgz",
 		"@playwright/test": "^1.44.1",
 		"@rollup/plugin-inject": "^5.0.5",
 		"@sveltejs/adapter-static": "^3.0.1",
