--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,6 @@ VITE_OISY_ALPHA_WARNING_URL="https://github.com/dfinity/oisy-wallet#status"
 VITE_ERC20_ICP_SYMBOL=ckICP
 VITE_ERC20_ICP_REPO_URL=https://github.com/dfinity/erc20-icp
 VITE_COINGECKO_API_URL=https://api.coingecko.com/api/v3
+VITE_EXCHANGE_DISABLED=false
 VITE_JUNO_SATELLITE_ID=
 VITE_JUNO_ORBITER_ID=
