--- a/src/backend/Cargo.toml
+++ b/src/backend/Cargo.toml
@@ -20,6 +20,8 @@ hex = "0.4"
 getrandom = { version = "0.2", features = ["custom"] }
 shared = { path = "../shared" }
 regex = "1.10.4"
+bs58 = "0.5.1"
+ripemd = "0.1.3"
 
 [dev-dependencies]
 lazy_static = "1.4.0"
