--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -2,8 +2,6 @@ name: Checks
 
 on:
   pull_request:
-    paths:
-      - 'src/frontend/**'
 
 jobs:
 
@@ -29,19 +27,8 @@ jobs:
       - name: Lint
         run: npm run check
 
-  test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Prepare
-        uses: ./.github/actions/prepare
-      - name: Test
-        run: npm run test
-
   may-merge:
-    needs: ['check', 'lint', 'test']
+    needs: ['check', 'lint']
     runs-on: ubuntu-latest
     steps:
       - name: Cleared for merging
