--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -7,13 +7,10 @@ on:
       - 'src/shared/**'
   workflow_dispatch:
 
-env:
-  RUNNER_OS: ubuntu-20.04
-
 jobs:
 
   docker-build-base:
-    runs-on: ${{ env.RUNNER_OS }}
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -22,7 +19,7 @@ jobs:
         uses: ./.github/actions/docker-build-base
 
   docker-build:
-    runs-on: ${{ env.RUNNER_OS }}
+    runs-on: ubuntu-20.04
     needs: docker-build-base
     strategy:
       matrix:
@@ -41,7 +38,7 @@ jobs:
           target: ${{ matrix.target }}
 
   tests:
-    runs-on: ${{ env.RUNNER_OS }}
+    runs-on: ubuntu-20.04
     needs: [ 'docker-build' ]
     steps:
       - uses: actions/checkout@v4
@@ -66,7 +63,7 @@ jobs:
 
   may-merge:
     needs: [ 'tests' ]
-    runs-on: ${{ env.RUNNER_OS }}
+    runs-on: ubuntu-20.04
     steps:
       - name: Cleared for merging
         run: echo OK
