--- a/.github/workflows/backend-checks.yml
+++ b/.github/workflows/backend-checks.yml
@@ -41,8 +41,22 @@ jobs:
                   exit 1
           }
 
+  lint:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-backend-tests-${{ hashFiles('Cargo.lock', 'rust-toolchain.toml') }}
+      - name: Lint
+        run: ./scripts/lint.rust.sh
+
   may-merge:
-    needs: [ 'format' ]
+    needs: [ 'format', 'lint' ]
     runs-on: ubuntu-20.04
     steps:
       - name: Cleared for merging
