--- a/.github/workflows/deploy-to-environment.yml
+++ b/.github/workflows/deploy-to-environment.yml
@@ -193,7 +193,7 @@ jobs:
       - name: Deploy Frontend to Environment
         run: |
           if [ "$CANISTER" == "frontend" ] || [ "${{ github.event_name }}" == "push" ]; then
-            dfx deploy frontend --network $NETWORK
+            dfx deploy frontend --network $NETWORK --no-asset-upgrade
           fi
 
       - name: Deploy Backend to Environment
