--- a/.github/workflows/deploy-to-environment.yml
+++ b/.github/workflows/deploy-to-environment.yml
@@ -204,7 +204,7 @@ jobs:
             canister_info() {
               echo '```'
               echo "# Canister info"
-              dfx canister info frontend --network "$NETWORK" | grep 'Module hash:'
+              dfx canister info frontend --network "$NETWORK"
               echo ""
               echo "# Asset hash"
               dfx canister call frontend certified_tree --network "$NETWORK" '(record {})' | sha256sum
