--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -32,6 +32,6 @@ jobs:
           git push origin "v${{ steps.get_version.outputs.version }}"
 
       - name: Publish Release Notes
-        uses: .github/actions/release-notes
+        uses: ./.github/actions/release-notes
         with:
           tag: 'v${{ steps.get_version.outputs.version }}'
