--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   release_notes:
+    if: github.ref_type == 'tag'
     runs-on: ubuntu-24.04
 
     steps:
@@ -17,7 +18,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Publish Release Notes
-        if: { { github.ref_type == 'tag' } }
-        uses: .github/actions/release-notes
+        uses: ./.github/actions/release-notes
         with:
           tag: github.ref_name
